Add two examples.

--- a/index.html
+++ b/index.html
@@ -5,15 +5,31 @@
     <title>CSS Tricks</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="bubble.css">
+    <link rel="stylesheet" href="avatar.css">
+    <link rel="stylesheet" href="button.css">
 </head>
 <body>
 <div class="trick">
     <h3>Bubbles</h3>
-    <div class="bubble top box">
+    <div class="bubble top">
         <div class="bubble top">hello world</div>
         <div class="bubble down">hello world</div>
         <div class="bubble left">hello world</div>
         <div class="bubble right">hello world</div>
+    </div>
+</div>
+<div class="trick">
+    <h3>Avatar</h3>
+    <div class="bubble top">
+        <div class="avatar"></div>
+    </div>
+</div>
+<div class="trick">
+    <h3>Buttons</h3>
+    <div class="bubble top">
+        <div class="button"></div>
+        <div class="button"></div>
+        <div class="button"></div>
     </div>
 </div>
 </body>
