--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="bubble.css">
     <link rel="stylesheet" href="avatar.css">
     <link rel="stylesheet" href="button.css">
+    <link rel="stylesheet" href="card.css">
 </head>
 <body>
 <div class="trick">
@@ -30,6 +31,15 @@
         <div class="button"></div>
         <div class="button"></div>
         <div class="button"></div>
+    </div>
+</div>
+<div class="trick">
+    <h3>Card</h3>
+    <div class="bubble top">
+        <div class="card">
+            <div class='image'></div>
+            <div class='footer'></div>
+        </div>
     </div>
 </div>
 </body>
