--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <h3>Card</h3>
     <div class="bubble top">
         <div class="card">
-            <div class='image'></div>
+            <a class='image' href=""></a>
             <div class='footer'></div>
         </div>
     </div>
