Add Bootstrap and MathJax.

--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CSS Tricks</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="bubble.css">
     <link rel="stylesheet" href="avatar.css">
     <link rel="stylesheet" href="button.css">
     <link rel="stylesheet" href="card.css">
+    <script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$$','$$'], ['\\(','\\)']], displayMath:[["\\[","\\]"]]}});</script>
+    <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_CHTML"></script>
 </head>
-<body>
+<body class="text-center">
 <div class="trick">
     <h3>Bubbles</h3>
     <div class="bubble top">
@@ -40,6 +43,18 @@
             <a class='image' href=""></a>
             <div class='footer'></div>
         </div>
+    </div>
+</div>
+<div>
+    <h3>Math</h3>
+    <div class="bubble top">
+        <h1>$$x = {-b \pm \sqrt{b^2-4ac} \over 2a}$$</h1>
+    </div>
+</div>
+<div>
+    <h3>GitHub Gist</h3>
+    <div class="bubble top">
+        <script src="https://gist.github.com/kq2/f2a12db9a84f642aa2026294e21fa5c4.js"></script>
     </div>
 </div>
 </body>
