--- a/index.html
+++ b/index.html
@@ -12,49 +12,51 @@
     <script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$$','$$'], ['\\(','\\)']], displayMath:[["\\[","\\]"]]}});</script>
     <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_CHTML"></script>
 </head>
-<body class="text-center">
-<div class="trick">
-    <h3>Bubbles</h3>
-    <div class="bubble top">
-        <div class="bubble top">hello world</div>
-        <div class="bubble down">hello world</div>
-        <div class="bubble left">hello world</div>
-        <div class="bubble right">hello world</div>
-    </div>
-</div>
-<div class="trick">
-    <h3>Avatar</h3>
-    <div class="bubble top">
-        <div class="avatar"></div>
-    </div>
-</div>
-<div class="trick">
-    <h3>Buttons</h3>
-    <div class="bubble top">
-        <div class="button"></div>
-        <div class="button"></div>
-        <div class="button"></div>
-    </div>
-</div>
-<div class="trick">
-    <h3>Card</h3>
-    <div class="bubble top">
-        <div class="card">
-            <a class='image' href=""></a>
-            <div class='footer'></div>
+<body>
+<div class="container text-center">
+    <div class="trick">
+        <h3>Bubbles</h3>
+        <div class="bubble top">
+            <div class="bubble top">hello world</div>
+            <div class="bubble down">hello world</div>
+            <div class="bubble left">hello world</div>
+            <div class="bubble right">hello world</div>
         </div>
     </div>
-</div>
-<div>
-    <h3>Math</h3>
-    <div class="bubble top">
-        <h1>$$x = {-b \pm \sqrt{b^2-4ac} \over 2a}$$</h1>
+    <div class="trick">
+        <h3>Avatar</h3>
+        <div class="bubble top">
+            <div class="avatar"></div>
+        </div>
     </div>
-</div>
-<div>
-    <h3>GitHub Gist</h3>
-    <div class="bubble top">
-        <script src="https://gist.github.com/kq2/f2a12db9a84f642aa2026294e21fa5c4.js"></script>
+    <div class="trick">
+        <h3>Buttons</h3>
+        <div class="bubble top">
+            <div class="button"></div>
+            <div class="button"></div>
+            <div class="button"></div>
+        </div>
+    </div>
+    <div class="trick">
+        <h3>Card</h3>
+        <div class="bubble top">
+            <div class="card">
+                <a class='image' href=""></a>
+                <div class='footer'></div>
+            </div>
+        </div>
+    </div>
+    <div>
+        <h3>Math</h3>
+        <div class="bubble top">
+            <h1>$$x = {-b \pm \sqrt{b^2-4ac} \over 2a}$$</h1>
+        </div>
+    </div>
+    <div>
+        <h3>GitHub Gist</h3>
+        <div class="bubble top">
+            <script src="https://gist.github.com/kq2/f2a12db9a84f642aa2026294e21fa5c4.js"></script>
+        </div>
     </div>
 </div>
 </body>
