--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CSS Tricks</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -14,7 +15,7 @@
 </head>
 <body>
 <div class="container text-center">
-    <div class="trick">
+    <div>
         <h3>Bubbles</h3>
         <div class="bubble top">
             <div class="bubble top">hello world</div>
@@ -23,13 +24,13 @@
             <div class="bubble right">hello world</div>
         </div>
     </div>
-    <div class="trick">
+    <div>
         <h3>Avatar</h3>
         <div class="bubble top">
             <div class="avatar"></div>
         </div>
     </div>
-    <div class="trick">
+    <div>
         <h3>Buttons</h3>
         <div class="bubble top">
             <div class="button"></div>
@@ -37,7 +38,7 @@
             <div class="button"></div>
         </div>
     </div>
-    <div class="trick">
+    <div>
         <h3>Card</h3>
         <div class="bubble top">
             <div class="card">
@@ -49,7 +50,7 @@
     <div>
         <h3>Math</h3>
         <div class="bubble top">
-            <h1>$$x = {-b \pm \sqrt{b^2-4ac} \over 2a}$$</h1>
+            <h2>$$x = {-b \pm \sqrt{b^2-4ac} \over 2a}$$</h2>
         </div>
     </div>
     <div>
@@ -58,6 +59,28 @@
             <script src="https://gist.github.com/kq2/f2a12db9a84f642aa2026294e21fa5c4.js"></script>
         </div>
     </div>
+    <div>
+        <h3>Checkboxes</h3>
+        <div class="bubble top text-left">
+            <div>$$x^2 = 1$$, $$x = ?$$</div>
+            <div>
+                <div class="checkbox">
+                    <label><input type="checkbox" value=""> $$-1$$</label>
+                </div>
+                <div class="checkbox">
+                    <label><input type="checkbox" value=""> $$0$$</label>
+                </div>
+                <div class="checkbox">
+                    <label><input type="checkbox" value=""> $$1$$</label>
+                </div>
+                <div class="checkbox">
+                    <label><input type="checkbox" value=""> $$2$$</label>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
