--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 <div class="container text-center">
     <div>
-        <h3>Bubbles</h3>
+        <div>Bubbles</div>
         <div class="bubble top">
             <div class="bubble top">hello world</div>
             <div class="bubble down">hello world</div>
@@ -25,13 +25,13 @@
         </div>
     </div>
     <div>
-        <h3>Avatar</h3>
+        <div>Avatar</div>
         <div class="bubble top">
             <div class="avatar"></div>
         </div>
     </div>
     <div>
-        <h3>Buttons</h3>
+        <div>Buttons</div>
         <div class="bubble top">
             <div class="button"></div>
             <div class="button"></div>
@@ -39,22 +39,22 @@
         </div>
     </div>
     <div>
-        <h3>Card</h3>
+        <div>Card</div>
         <div class="bubble top">
             <div class="card">
-                <a class='image' href=""></a>
+                <a class='image' href="#"></a>
                 <div class='footer'></div>
             </div>
         </div>
     </div>
     <div>
-        <h3>Math</h3>
+        <div>Math</div>
         <div class="bubble top">
-            <h2>$$x = {-b \pm \sqrt{b^2-4ac} \over 2a}$$</h2>
+            <div>$$x = {-b \pm \sqrt{b^2-4ac} \over 2a}$$</div>
         </div>
     </div>
     <div>
-        <h3>GitHub Gist</h3>
+        <div>GitHub Gist</div>
         <div class="bubble top">
             <script src="https://gist.github.com/kq2/f2a12db9a84f642aa2026294e21fa5c4.js"></script>
         </div>
